New Centos scripts.
1. refs #669